--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run markdown lint
-  run: |
+  run-on: |
     npm install remark-cli remark-preset-lint-consistent
     npx remark . --use remark-preset-lint-consistent --frail
